EPMRPP-98469 || Fix truncation of User Full Name in Organizations (#4162)
* EPMRPP-98469 || Fix truncation of User Full Name in Organizations

* EPMRPP-98469 || Code review fixes - 1

* EPMRPP-98469 || Code review fixes - 2

--- a/app/src/pages/common/membersPage/userNameCell/userNameCell.scss
+++ b/app/src/pages/common/membersPage/userNameCell/userNameCell.scss
@@ -27,8 +27,18 @@
     }
   }
 
-  .full-name {
+  .name-badge-wrapper {
+    display: flex;
+    align-items: center;
     margin-left: 16px;
+    min-width: 0;
+    flex: 1;
+  }
+
+  .full-name {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   }
 
   .badges {
